# clippi

./: .gitignore  LICENSE  README.en.md  README.ja.md  README.md
.github/workflows/: build-macos.yml  build-windows.yml
core/: Cargo.toml
core/src/: binaries.rs  error.rs  ffi.rs  gpu.rs  lib.rs  probe.rs  progress.rs  queue.rs  task.rs  types.rs
macos/Clippi/: ClippiApp.swift  ClippiCore.h  ContentView.swift  Localization.swift
macos/Clippi.xcodeproj/: project.pbxproj
macos/Clippi/Assets.xcassets/AppIcon.appiconset/: Contents.json
macos/Clippi/FFI/: ClippiFFI.swift
macos/Clippi/ViewModels/: MainViewModel.swift
macos/Clippi/Views/: MainView.swift
macos/Clippi/en.lproj/: Localizable.strings
macos/Clippi/ja.lproj/: Localizable.strings
macos/Clippi/zh-Hans.lproj/: Localizable.strings
project-log/: 00-project-overview.md  01-function-design.md  02-database-design.md  03-api-design.md  04-project-architecture.md  05-current-status.md  06-dev-log.md  07-deployment.md  08-env-config.md  09-external-api-reference.md  10-planning-log.md  11-code-review-log.md  README.md
scripts/: build-core.ps1  build-core.sh  download_ffmpeg.ps1  download_ffmpeg.sh
windows/Clippi/: App.xaml  App.xaml.cs  Clippi.csproj  ClippiCore.cs  Localization.cs  MainWindow.xaml  MainWindow.xaml.cs  app.manifest
windows/Clippi/Strings/en-US/: Resources.resw
windows/Clippi/Strings/ja-JP/: Resources.resw
windows/Clippi/Strings/zh-CN/: Resources.resw
windows/Clippi/ViewModels/: MainViewModel.cs
