[package]
name = "clippi-core"
version = "0.0.1"
edition = "2021"
description = "Clippi core library - video processing engine wrapper"
license = "GPL-2.0"

[lib]
name = "clippi_core"
crate-type = ["cdylib", "staticlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
once_cell = "1.19"

[profile.release]
lto = true
codegen-units = 1
