[package]
name = "clippi-core"
version = "1.0.2"
edition = "2021"
description = "Clippi core library - video processing engine wrapper"
license = "GPL-2.0"

[lib]
name = "clippi_core"
crate-type = ["cdylib", "staticlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["sync"] }

[profile.release]
lto = true
codegen-units = 1
